Fixed Login page alignment in IE browser and tested in IE v11..

--- a/HexiCloud/public_html/css/hc-login.css
+++ b/HexiCloud/public_html/css/hc-login.css
@@ -31,7 +31,6 @@ and open the template in the editor.
 
 .login-page hr {
     border-top: 1px solid #b1c7d2;
-    width: 67%;
 }
 
 .login-page .login-form-group {
@@ -92,11 +91,6 @@ and open the template in the editor.
     }
 }
 
-@media only screen and (max-width: 1280px) {
-   .login-page hr {
-    width: 85%;
-}
-}
 @media only screen and (max-width: 480px) {
     .login-page {
         margin-top: 45px;
